# rchi

./: .env  .gitignore  TODO.md  ia.py  lossatk.py  lossdef.py  model_load_save.py  pyproject.toml  riichi_model.py
data_types/: dragons.py  tile.py  winds.py
docs/: gamestate.md  one_data.json
models/: rchi.pth
rchi/: dataset_check.py  gameconstructs.py  gamestate.py
rchi/data_types/: suits.py  tile.py
